[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/Backgrounds/you_win_text.png" type="Texture" id=1]
[ext_resource path="res://assets/Backgrounds/win.ogv" type="VideoStream" id=2]
[ext_resource path="res://WinScene.gd" type="Script" id=3]
[ext_resource path="res://assets/Backgrounds/next_level_text.png" type="Texture" id=4]
[ext_resource path="res://assets/Backgrounds/win_audio.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/Backgrounds/win_applause.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/Backgrounds/seconds.png" type="Texture" id=7]
[ext_resource path="res://assets/Backgrounds/going_back_to_home_screen.png" type="Texture" id=8]
[ext_resource path="res://assets/HUD/hud_9.png" type="Texture" id=9]
[ext_resource path="res://assets/Quicksand-SemiBold.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://assets/Sounds/clicked.ogg" type="AudioStream" id=11]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.392157, 0, 0.588235 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.945098, 0.52549, 0.152941, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.894118, 0.705882, 0.133333, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0.34902, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.945098, 0.52549, 0.152941, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.894118, 0.705882, 0.133333, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 0.34902, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StreamTexture" id=8]
flags = 4
load_path = "res://.import/home_text.png-f2519a4e0beb5e73d52398b480cef4e4.stex"

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.945098, 0.52549, 0.152941, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.894118, 0.705882, 0.133333, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 0.34902, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StreamTexture" id=12]
flags = 4
load_path = "res://.import/quit_text.png-4db67b27f3bc9fd28a6cdbe0c9f57b3a.stex"

[sub_resource type="DynamicFont" id=13]
size = 50
font_data = ExtResource( 10 )

[node name="WinScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Background" type="VideoPlayer" parent="."]
modulate = Color( 1, 1, 1, 0.588235 )
self_modulate = Color( 1, 1, 1, 0.588235 )
margin_right = 1920.0
margin_bottom = 1080.0
stream = ExtResource( 2 )

[node name="WinAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="WinApplause" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Panel" type="Panel" parent="."]
margin_left = 256.0
margin_top = 64.0
margin_right = 1664.0
margin_bottom = 320.0
custom_styles/panel = SubResource( 1 )

[node name="YouWin" type="TextureRect" parent="."]
margin_left = 256.0
margin_top = 104.0
margin_right = 1664.0
margin_bottom = 288.0
texture = ExtResource( 1 )
stretch_mode = 6

[node name="NextLevel" type="Button" parent="."]
margin_left = 728.0
margin_top = 504.0
margin_right = 1208.0
margin_bottom = 624.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
icon = ExtResource( 4 )
icon_align = 1
expand_icon = true

[node name="Home" type="Button" parent="."]
margin_left = 728.0
margin_top = 656.0
margin_right = 1208.0
margin_bottom = 776.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
icon = SubResource( 8 )
icon_align = 1
expand_icon = true

[node name="Quit" type="Button" parent="."]
margin_left = 728.0
margin_top = 808.0
margin_right = 1208.0
margin_bottom = 928.0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
icon = SubResource( 12 )
icon_align = 1
expand_icon = true

[node name="Timer" type="Timer" parent="."]
wait_time = 34.16
autostart = true

[node name="GoingBackToHomeScreenIn" type="TextureRect" parent="."]
visible = false
margin_left = 480.0
margin_top = 952.0
margin_right = 1160.0
margin_bottom = 1008.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="SecondsNumber" type="TextureRect" parent="."]
visible = false
margin_left = 1168.0
margin_top = 944.0
margin_right = 1216.0
margin_bottom = 1008.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="SecondsText" type="TextureRect" parent="."]
visible = false
margin_left = 1208.0
margin_top = 952.0
margin_right = 1448.0
margin_bottom = 1008.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="ButtonClickedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="FastestTime" type="Label" parent="."]
margin_top = 376.0
margin_right = 1920.0
margin_bottom = 439.0
custom_colors/font_color = Color( 1, 0.34902, 0, 1 )
custom_fonts/font = SubResource( 13 )
align = 1
valign = 1

[connection signal="pressed" from="NextLevel" to="." method="_on_NextLevel_pressed"]
[connection signal="pressed" from="Home" to="." method="_on_Home_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
